@@ -1,5 +1,10 @@
 2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>
 
+	* xfce4-notifyd-config/main.c: Remove a couple strings.
+	* po/xfce4-notifyd.pot: Update .pot file.
+
+2008-11-15	Brian J. Tarricone <bjt23@cornell.edu>
+
 	* NEWS: Add NEWS file for first release.
 	* xfce4-notifyd-config/main.c: Sort items in the themes list.
 
